# TheMinerzCoin

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  build.sh  conanfile.py  configure.ac  generate_build.sh  install.sh  libbitcoinconsensus.pc  libbitcoinconsensus.pc.in  pyproject.toml
blst_lib/: CMakeLists.txt
rust/: CMakeLists.txt  Cargo.toml  build.rs
rust/src/: lib.rs
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addresstype.cpp  amount.cpp  base58.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  cashaddrenc.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coins.h  compat.h  config.cpp  config.h  (+36 more)
src/.deps/: libbitcoin_common_a-amount.Po  libbitcoin_common_a-arith_uint256.Po  libbitcoin_common_a-base58.Po  libbitcoin_common_a-bloom.Po  libbitcoin_common_a-cashaddr.Po  libbitcoin_common_a-cashaddrenc.Po  libbitcoin_common_a-chainparams.Po  libbitcoin_common_a-coins.Po  libbitcoin_common_a-compressor.Po  libbitcoin_common_a-config.Po  libbitcoin_common_a-core_read.Po  libbitcoin_common_a-core_write.Po  libbitcoin_common_a-dstencode.Po  libbitcoin_common_a-hash.Po  libbitcoin_common_a-key.Po  libbitcoin_common_a-keystore.Po  libbitcoin_common_a-netaddress.Po  libbitcoin_common_a-netbase.Po  libbitcoin_common_a-protocol.Po  libbitcoin_common_a-pubkey.Po  libbitcoin_common_a-scheduler.Po  libbitcoin_consensus_a-arith_uint256.Po  libbitcoin_consensus_a-hash.Po  libbitcoin_consensus_a-pubkey.Po  libbitcoin_consensus_a-timedatadummy.Po  libbitcoin_consensus_a-uint256.Po  libbitcoin_consensus_a-utilstrencodings.Po  libbitcoin_server_a-addrdb.Po  libbitcoin_server_a-addrman.Po  libbitcoin_server_a-blockencodings.Po  libbitcoin_server_a-bloom.Po  libbitcoin_server_a-chain.Po  libbitcoin_server_a-checkpoints.Po  libbitcoin_server_a-dbwrapper.Po  libbitcoin_server_a-httprpc.Po  libbitcoin_server_a-httpserver.Po  libbitcoin_server_a-init.Po  libbitcoin_server_a-main.Po  libbitcoin_server_a-merkleblock.Po  libbitcoin_server_a-miner.Po  (+31 more)
src/bench/: .gitignore  CMakeLists.txt  cashaddr.cpp  ccoins_caching.cpp
src/common/: args.cpp
src/compat/: CMakeLists.txt
src/config/: bitcoin-config.h  bitcoin-config.h.in  bitcoin-config.h.in~
src/consensus/: CMakeLists.txt  consensus.cpp  consensus.h  params.h  slashing.cpp  slashing.h  taproot.cpp  taproot.h  tx_verify.cpp  tx_verify.h
src/crc32c/: CMakeLists.txt
src/crypto/: CMakeLists.txt  bls_aggregate.cpp  bls_aggregate.h  scrypt.cpp  yescrypt.cpp  yescrypt.h
src/grpc/: CMakeLists.txt  node.grpc.pb.cc  node.grpc.pb.h  node.pb.cc  node.pb.h  node_service.cpp  node_service.h
src/hw_wallet/: CMakeLists.txt  hw_wallet.cpp  hw_wallet.h
src/index/: base.cpp  base.h  blockfilterindex.h  coinstatsindex.h  txindex.h
src/init/: bitcoin-node.cpp
src/interfaces/: chain.h
src/kernel/: chainparams.cpp  context.h
src/leveldb/: README.md
src/lightning/: CMakeLists.txt  lightning_client.cpp  lightning_client.h
src/logging/: timer.h
src/minisketch/: README.md
src/neutrino/: CMakeLists.txt  compact_filter.cpp  compact_filter.h
src/node/: CMakeLists.txt  blockstorage.cpp  blockstorage.h  chainstate.h  context.h  interfaces.cpp  miner.cpp  psbt.h  utxo_snapshot.cpp  utxo_snapshot.h
src/p2p/: CMakeLists.txt  dandelion.cpp  dandelion.h  handshake.cpp  handshake.h
src/policy/: CMakeLists.txt  policy.cpp  rbf.h  settings.h  truc_policy.h
src/primitives/: CMakeLists.txt  brc20transaction.cpp  brc20transaction.h  transaction.cpp  transaction.h
src/qt/: CMakeLists.txt  Makefile  README.md  bitcoin.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  macos_appnap.mm  openuridialog.cpp  paymentserver.cpp  paymentserver.h  receivecoinsdialog.cpp  recentrequeststablemodel.h  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  utilitydialog.cpp  walletcontroller.cpp  walletmodel.cpp
src/rollup/: CMakeLists.txt  block_commitment.cpp  block_commitment.h  proof_verifier.cpp  proof_verifier.h
src/rpc/: CMakeLists.txt  blockchain.cpp  graphql.cpp  graphql.h  mempool.cpp  metrics.cpp  metrics.h  mining.cpp  misc.cpp  net.cpp  node.cpp  output_script.cpp  rawtransaction.cpp  rawtransaction_util.cpp  server.cpp  util.cpp
src/rust_bindings/: secp256k1.h
src/script/: CMakeLists.txt  interpreter.cpp  interpreter.h  script.h  signingprovider.h  standard.h
src/secp256k1/: CMakeLists.txt
src/support/: CMakeLists.txt
src/test/: CMakeLists.txt  Makefile  README.md  assumeutxo_tests.cpp  bitcoin-util-test.py  blk_minfee_tests.cpp  blk_v2_transaction_tests.cpp  blockmanager_tests.cpp  bloom_tests.cpp  bls_tests.cpp  brc20transaction_tests.cpp  buildenv.py  cashaddr_tests.cpp  cashaddrenc_tests.cpp  checkblock_tests.cpp  consensus_tests.cpp  dandelion_tests.cpp  dbwrapper_tests.cpp  dstencode_tests.cpp  dummyinput_helper.h  fs_tests.cpp  handshake_tests.cpp  hash_tests.cpp  main.cpp  mempool_tests.cpp  miner_tests.cpp  miniscript_tests.cpp  pow_tests.cpp  rollup_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  schnorr_tests.cpp  taproot_tests.cpp  testutil.h  transaction_tests.cpp  txpackage_tests.cpp  util_tests.cpp  validation_block_tests.cpp  validation_tests.cpp
src/univalue/: CMakeLists.txt
src/util/: chaintype.h  exception.cpp  moneystr.h  strencodings.h  translation.cpp
src/wallet/: CMakeLists.txt  bdb.cpp  coinselection.cpp  db.cpp  db.h  dump.cpp  external_signer_scriptpubkeyman.cpp  psbt.cpp  psbt.h  rpcdump.cpp  rpcwallet.cpp  spend.cpp  staking.cpp  staking.h  (+8 more)
(+611 files in other folders)
