file(GLOB HW_SOURCES *.cpp)
add_library(hw_wallet STATIC ${HW_SOURCES})
target_include_directories(hw_wallet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
find_package(hidapi QUIET)
if(hidapi_FOUND)
  target_include_directories(hw_wallet PUBLIC ${hidapi_INCLUDE_DIRS})
  target_link_libraries(hw_wallet PUBLIC ${hidapi_LIBRARIES})
  target_compile_definitions(hw_wallet PUBLIC HAVE_HIDAPI)
endif()
